ola-parser/src/testdata/syntaxTests/parsing/external_variable.sol
contract c {
	u256 external x;
}
// ----
// ParserError 2314: (19-27): Expected identifier but got 'external'
